<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.azet.thingsmonitor.fragments.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/settings_tittle_1"
                android:textAlignment="center"
                android:textColor="@color/darkFont"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tvAccess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/access"
                    android:textColor="@color/darkFont"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/rgAccess"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checkedButton="@id/rbPublic"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbPublic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:text="public" />

                    <RadioButton
                        android:id="@+id/rbPrivate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="private" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/channel"
                    android:textColor="@color/darkFont"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/editChannel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:width="110dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:maxLength="16"
                    android:singleLine="true"
                    android:text="@string/default_channel"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imgChannel"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="right|center_vertical"
                    android:src="@drawable/cancel" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llApiKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read_key"
                    android:textColor="@color/darkFont"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/editReadKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="150dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:maxLength="16"
                    android:singleLine="true"
                    android:text="@string/default_read_key"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/settings_tittle_2"
                android:textAlignment="center"
                android:textColor="@color/darkFont"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txtSettingsDownloadRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field"
                    android:textColor="@color/darkFont"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/spinnerField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:entries="@array/fields"
                    android:minWidth="150dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/threshold"
                    android:textColor="@color/darkFont"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="10" />

                <EditText
                    android:id="@+id/editThreshold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="150dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:maxLength="16"
                    android:singleLine="true"
                    android:text="@string/not_available"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txtSettingsDownloadRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action"
                    android:textColor="@color/darkFont"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="10" />

                <Spinner
                    android:id="@+id/spinnerAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:entries="@array/actions"
                    android:minWidth="150dp" />

            </LinearLayout>

            <Switch
                android:id="@+id/swEnabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:checked="false"
                android:gravity="center"
                android:padding="10dp"
                android:showText="true"
                android:splitTrack="false"
                android:text="Enabled"
                android:textAlignment="viewStart"
                android:textColor="@color/darkFont"
                android:textOff="OFF"
                android:textOn="ON"
                android:textSize="18sp"
                tools:checked="false" />

            <TextView
                android:id="@+id/txtSettingsDownloadRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Credits"
                android:textAlignment="center"
                android:textColor="@color/darkFont"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:layout_weight="1"
                    android:text="@string/credits"
                    android:textAlignment="center" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</FrameLayout>
