<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.azet.thingsmonitor.fragments.DashboardFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/alertBackground"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/no_channel"
            android:textAlignment="center"
            android:textColor="@color/alertFont"
            android:textSize="18sp"
            android:visibility="gone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7" />

        <TextView
            android:id="@+id/txtFieldName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/field_name"
            android:textAlignment="center"
            android:textColor="@color/darkFont"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="13" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/const_min"
                android:textColor="@color/darkFont"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/not_available" />

            <TextView
                android:id="@+id/txtMinUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_units" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/const_avg"
                android:textColor="@color/darkFont"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtAvg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/not_available" />

            <TextView
                android:id="@+id/txtAvgUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_units" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/const_max"
                android:textColor="@color/darkFont"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/not_available" />

            <TextView
                android:id="@+id/txtMaxUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_units" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/img"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:adjustViewBounds="false"
                android:src="@drawable/thermometer" />

            <TextView
                android:id="@+id/txtValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/not_available"
                android:textColor="@color/darkFont"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/txtUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:text="@string/no_units"
                android:textColor="@color/darkFont"
                android:textSize="48sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/last_record"
            android:textAlignment="center" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textAlignment="center"
            android:textColor="@color/darkFont"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20" />
    </LinearLayout>
</FrameLayout>
